<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ConventionAppActivity"
    android:background="@drawable/redbackground"
    android:clickable="false">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="325dp"
            android:layout_height="321dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:weightSum="1"
            android:baselineAligned="false"
            android:background="#ccfaffff">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="294dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="20dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:layout_marginTop="20dp">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:weightSum="1">

                        <TextView
                            android:layout_width="85dp"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/Login"
                            android:id="@+id/LoginTextView" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/LoginTextBox" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/Password"
                            android:id="@+id/PasswordTextView" />

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/passwordTextBox"
                            android:layout_weight="1" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="46dp"
                    android:weightSum="1"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp">

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="249dp"
                        android:layout_height="wrap_content"
                        android:text="@string/LoginButton"
                        android:id="@+id/buttonLogin"
                        android:onClick="onButtonClick" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="294dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="161dp"
                        android:layout_height="fill_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/ForgotPassword"
                            android:id="@+id/buttonForgotPassword"
                            android:onClick="onButtonClick" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/ForgotUsername"
                            android:id="@+id/buttonForgotUsername"
                            android:onClick="onButtonClick" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="28dp"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/Register"
                        android:id="@+id/buttonRegister"
                        android:clickable="true"
                        android:onClick="onButtonClick" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="47dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/FacebookIcon"
                        android:src="@drawable/ficon" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/TwitterIcon"
                        android:src="@drawable/ticon"/>

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/LinkedinIcon"
                        android:src="@drawable/licon" />

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/EmailIcon"
                        android:src="@drawable/eicon" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>