<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/gradient"
    tools:context="com.haldane.katherine.conventionapp.EventLayoutActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1">


        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="5">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="3"
                android:layout_gravity="right">

            </LinearLayout>

        </GridLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <GridLayout
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:layout_width="108dp"
                    android:layout_height="70dp"
                    android:id="@+id/eventImage"
                    />

            </GridLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:gravity="right">

                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/addToMyEventlist"
                        android:id="@+id/addToMyEventList"
                        android:layout_row="0"
                        android:layout_column="2" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/myEventListCheckbox"
                        android:layout_row="0"
                        android:layout_column="3"
                        android:checked="false"
                        android:onClick="onButtonClick" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/checkin"
                        android:id="@+id/checkIn" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkinCheckbox"
                        android:checked="false"
                        android:onClick="onButtonClick" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FEFEEB">

            <LinearLayout
                android:layout_marginLeft="15dp"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Type:"
                    android:textSize="18dp"
                    android:id="@+id/type" />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="4dp"
                    android:gravity="left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/Title"
                    android:id="@+id/name"
                    android:textSize="19dp"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_marginLeft="10dp"
                    android:layout_columnSpan="4"
                    />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginLeft="15dp">

                <TextView
                    android:layout_marginBottom="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/Date"
                    android:id="@+id/date"
                    android:textSize="16dp"/>

                <TextView
                    android:layout_marginBottom="2dp"
                    android:textSize="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/Time"
                    android:id="@+id/time" />

                <TextView
                    android:textSize="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/Location"
                    android:id="@+id/location"
                    android:layout_marginBottom="10dp"/>

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="208dp"
            android:background="#FEFEEB"
            android:layout_weight="0.69">

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Lorem ipsum dolor sit amet, sed nam non phasellus vestibulum nunc, a torquent. Nisl sit primis justo, blandit iaculis rutrum pellentesque et tincidunt ipsum, congue mollis ante bibendum id, scelerisque hendrerit torquent lacus. Lorem wisi irure suscipit ac accumsan. Dignissim volutpat blandit aliquam facilisis, orci non integer ut nec, arcu scelerisque felis leo, vitae ut eget duis elementum imperdiet, quis orci sit totam nulla quis. Blandit quisque nam ornare quam in ligula, pellentesque pharetra sit nibh sit ridiculus fermentum, hac odio eleifend volutpat laoreet, mattis sagittis phasellus. Donec sodales quisque pharetra montes imperdiet mauris. Et donec sodales vivamus vel mattis, quam hendrerit nullam ut. Sed vulputate quis nullam blandit, odio vestibulum orci a phasellus urna diam, lobortis turpis."
                    android:id="@+id/description" />
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:textSize="12dp"
                android:layout_marginTop="10dp"
                android:layout_width="261dp"
                android:layout_height="31dp"
                android:text="@string/purchaseTickets"
                android:id="@+id/purchaseButton"
                android:onClick="onButtonClick"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/buttonshape"
                android:textColor="#FFFFFF"
                android:visibility="invisible"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>